# SchemaBLAST

./: .env.example  .gitignore  README.md  docker-compose-solr.yml  pyproject.toml  query.yaml  report.html  report_mapping.csv  result.html  result.txt  result_mapping.csv  setup_solr.sh
schema_blast/: cli.py  comparator.py
schema_blast/utils/: branding.py  html_generator.py
schema_comparator/: cli.py  comparator.py  models.py  storage.py
schema_comparator/utils/: branding.py  extractors.py  html_generator.py  text_math.py
