[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schemablast"
version = "0.1.0"
description = "A tool for comparing various data schemas"
dependencies = [
    "requests",
    "pyyaml",
    "dotenv",
    "rapidfuzz"

]

[project.scripts]
schemablast = "schema_blast.cli:main"

[tool.setuptools]
packages = ["schema_blast"]